welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:10: error: type mismatch;
 found   : Unit
 required: Boolean
       if (compteur = 2) {
                    ^max2Value:11: error: not found: value os
         return os
                ^